# Nexora-CRM

./: .env.example  .env.production  .gitignore  CHANGELOG.md  DEPLOYMENT.md  GUIDE.md  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  CMakeLists.txt  Dockerfile
backend/include/api/: auth_handler.hpp  clients_handler.hpp  finance_handler.hpp  tasks_handler.hpp  users_handler.hpp
backend/include/cache/: redis_cache.hpp
backend/include/core/: config.hpp  database.hpp  jwt.hpp  middleware.hpp  password.hpp  rate_limiter.hpp
backend/include/email/: smtp_client.hpp
backend/include/export/: csv_exporter.hpp
backend/include/metrics/: prometheus.hpp
backend/include/notifications/: telegram.hpp  websocket.hpp
backend/include/utils/: audit.hpp  response.hpp  slugify.hpp
backend/src/: main.cpp
backend/src/api/: auth_handler.cpp  clients_handler.cpp  finance_handler.cpp  tasks_handler.cpp  users_handler.cpp
backend/src/cache/: .gitkeep  redis_cache.cpp
backend/src/core/: config.cpp  database.cpp  jwt.cpp  middleware.cpp  password.cpp  rate_limiter.cpp
backend/src/email/: smtp_client.cpp
backend/src/export/: csv_exporter.cpp
backend/src/metrics/: prometheus.cpp
backend/src/notifications/: telegram.cpp  websocket.cpp
backend/src/utils/: audit.cpp  slugify.cpp
backend/tests/: CMakeLists.txt  test_csv_exporter.cpp  test_jwt.cpp  test_password.cpp  test_slugify.cpp
docker/: README.md  nginx.conf
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx-spa.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx
frontend/src/components/ui/: index.tsx
frontend/src/hooks/: useAuth.tsx  useClients.ts
frontend/src/pages/: Admin.tsx  Clients.tsx  Dashboard.tsx  Finance.tsx  Tasks.tsx
frontend/src/pages/auth/: Auth.tsx
frontend/src/types/: index.ts
